--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,10 +16,32 @@
         <div class="middle">
             
         </div>
+        <div class="site">
+            <ul>
+                <a [routerLink]="'/gestion'" class="btn2">
+                    <li class="btn btn2">Gestion des employés</li>
+                </a>
+            </ul>
+        </div>
+        <div class="site">
+            <ul>
+                <a [routerLink]="'/site'" class="btn2">
+                    <li class="btn btn2">Gestion des sites</li>
+                </a>
+            </ul>
+        </div>
+        <div class="site">
+            <ul>
+                <a [routerLink]="'/service'" class="btn2">
+                    <li class="btn btn2">Gestion des services</li>
+                </a>
+            </ul>
+        </div>
+       
         <div class="deconnexion">
             <ul>
-                <a [routerLink]="''" class="btn1">
-                    <li class="btn btn1">Se déconnecter</li>
+                     <a [routerLink]="''" class="btn1">
+                    <li class="btn btn1">Déconnexion</li>
                 </a>
             </ul>
         </div>
