--- a/src/app/components/connexion/connexion.component.html
+++ b/src/app/components/connexion/connexion.component.html
@@ -3,6 +3,9 @@
         <form action="" method="">
             <h1>Connexion</h1>
 
+            <label><b>Identifiant</b></label>
+            <input type="login" placeholder="Entrer l'identifiant" name="password" required>
+
             <label><b>Mot de passe</b></label>
             <input type="password" placeholder="Entrer le mot de passe" name="password" required>
 
