--- a/src/app/components/visiteur/visiteur.component.html
+++ b/src/app/components/visiteur/visiteur.component.html
@@ -1,10 +1,34 @@
-<app-navbar></app-navbar>
+<div class="main">
+    <div class="sidebar">
+        <ul>
+           
+    
+            <a>
+                <li>Se déconnecter</li>
+            </a>
+        </ul>
+    </div>
+    
+    <nav>
+        <div class="logo">
+            <h1>AgroSud</h1>
+        </div>
+        <div class="middle">
+            
+        </div>
+        <div class="site">
+            <ul>
+                <a [routerLink]="'/admin'" class="btn3">
+                    <li class="btn btn2">Administration</li>
+                </a>
+            </ul>
+        </div>
+    </nav>
+
 
 <div class="content">
     <h1>Liste des employés</h1>
-    <dx-data-grid class="tab background" id="gridContainer" [dataSource]="employees" keyExpr="id" [showBorders]="true"
-        (onRowUpdating)="updateEmployee($event)" (onRowInserting)="addEmployee($event)"
-        (onRowRemoving)="removeEmployee($event)">
+    <dx-data-grid class="tab background" id="gridContainer" [dataSource]="employees" keyExpr="id" [showBorders]="true">
 
         <dxo-search-panel [visible]="true"></dxo-search-panel>
         <dxo-paging [pageSize]="10"> </dxo-paging>
@@ -12,9 +36,7 @@
             [showPageSizeSelector]="showPageSizeSelector" [showInfo]="showInfo"
             [showNavigationButtons]="showNavButtons">
         </dxo-pager>
-        <dxo-editing mode="form" [allowUpdating]="true" [allowAdding]="true" [allowDeleting]="true">
-        </dxo-editing>
-
+        
         <dxi-column dataField="firstName" caption="Prénom"></dxi-column>
         <dxi-column dataField="lastName" caption="Nom"></dxi-column>
         <dxi-column dataField="phone" caption="Téléphone portable"></dxi-column>
