--- a/src/app/components/visiteur/visiteur.component.scss
+++ b/src/app/components/visiteur/visiteur.component.scss
@@ -4,7 +4,9 @@
 }
 
 
-
+.btn3{
+    margin: 50px;
+}
 
 nav .site li.btn2{
     background: #fe9d01;
@@ -17,14 +19,13 @@ nav .site li.btn2{
 }
 
 nav{
-    height: 20%;
+    height: 100%;
     width: 100%;
     background-color: rgb(12, 12, 12);
     box-shadow: 0 5px 5px #000000;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
 }
 
 nav .logo{
@@ -62,18 +63,9 @@ nav .middle .btn:hover{
     background-color: rgb(241, 240, 240);
 }
 
-nav .site a{
-    text-decoration: none;
-}
-
 nav .deconnexion{
     padding: 10px 20px;
     margin-right: 20px;
-    
-}
-
-nav .deconnexion a{
-  text-decoration: none;
 }
 
 nav .deconnexion li.btn1{
@@ -122,16 +114,10 @@ nav .menuburger{
     border-left: none;
 }
 
-.main{
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    //margin-top: 30px;
-    
-}
 
 .tab{
     width: 80%;
+    height: 100%;
 }
 
 @media screen and (max-width: 1050px){
@@ -149,3 +135,24 @@ nav .menuburger{
     }
     
 }
+
+
+
+h1{
+    text-align: center;
+}
+
+.tab{
+    width: 80%;
+}
+
+.content{
+    width: 100%;
+    height:70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
