--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-color: rgb(40, 40, 40);
+    background-color: rgb(255, 255, 255);
+    margin: 0;
+    padding: 0;
 }
